{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 1084,
  "lineage": "e80bf311-4355-2330-631b-3d8dd3cf0a74",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:loadbalancer/app/midecode-ionos/a7b37b114bc534d3",
            "arn_suffix": "app/midecode-ionos/a7b37b114bc534d3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "midecode-ionos-1706255685.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:loadbalancer/app/midecode-ionos/a7b37b114bc534d3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "midecode-ionos",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-063529c66929249da"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d9c61d5f9649fe1"
              },
              {
                "subnet_id": "subnet-07693580c4689a0b8"
              },
              {
                "subnet_id": "subnet-0b2682b57df10813a"
              }
            ],
            "subnets": [
              "subnet-05d9c61d5f9649fe1",
              "subnet-07693580c4689a0b8",
              "subnet-0b2682b57df10813a"
            ],
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0609e6a41cf755597",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener/app/midecode-ionos/a7b37b114bc534d3/05097e7d2cf9b16f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ALB: No matching rule found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener/app/midecode-ionos/a7b37b114bc534d3/05097e7d2cf9b16f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:loadbalancer/app/midecode-ionos/a7b37b114bc534d3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener/app/midecode-ionos/a7b37b114bc534d3/243e8e8b28b7eaf7",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:058264383156:certificate/15f45bf6-77d2-47a7-b24e-a7b154c04e26",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ALB: No matching rule found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener/app/midecode-ionos/a7b37b114bc534d3/243e8e8b28b7eaf7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:loadbalancer/app/midecode-ionos/a7b37b114bc534d3",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http/nginx1",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:targetgroup/tf-20250726033801229700000006/b85f1cd694abdf7a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener-rule/app/midecode-ionos/a7b37b114bc534d3/05097e7d2cf9b16f/8f5ab9337a9525c4",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "nginx1.midecode.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener-rule/app/midecode-ionos/a7b37b114bc534d3/05097e7d2cf9b16f/8f5ab9337a9525c4",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener/app/midecode-ionos/a7b37b114bc534d3/05097e7d2cf9b16f",
            "priority": 101,
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "http/nginx2",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:targetgroup/tf-20250726033800211300000003/5efe4731a9a4bcdd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener-rule/app/midecode-ionos/a7b37b114bc534d3/05097e7d2cf9b16f/afd5b9f7d774b046",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "nginx2.midecode.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener-rule/app/midecode-ionos/a7b37b114bc534d3/05097e7d2cf9b16f/afd5b9f7d774b046",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener/app/midecode-ionos/a7b37b114bc534d3/05097e7d2cf9b16f",
            "priority": 102,
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "https/nginx1",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:targetgroup/tf-20250726033801229700000006/b85f1cd694abdf7a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener-rule/app/midecode-ionos/a7b37b114bc534d3/243e8e8b28b7eaf7/c5b1b62e4155ac4e",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "nginx1.midecode.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener-rule/app/midecode-ionos/a7b37b114bc534d3/243e8e8b28b7eaf7/c5b1b62e4155ac4e",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener/app/midecode-ionos/a7b37b114bc534d3/243e8e8b28b7eaf7",
            "priority": 101,
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "https/nginx2",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:targetgroup/tf-20250726033800211300000003/5efe4731a9a4bcdd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener-rule/app/midecode-ionos/a7b37b114bc534d3/243e8e8b28b7eaf7/eba398fc600029ca",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "nginx2.midecode.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener-rule/app/midecode-ionos/a7b37b114bc534d3/243e8e8b28b7eaf7/eba398fc600029ca",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:listener/app/midecode-ionos/a7b37b114bc534d3/243e8e8b28b7eaf7",
            "priority": 102,
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nginx1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:targetgroup/tf-20250726033801229700000006/b85f1cd694abdf7a",
            "arn_suffix": "targetgroup/tf-20250726033801229700000006/b85f1cd694abdf7a",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:targetgroup/tf-20250726033801229700000006/b85f1cd694abdf7a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:loadbalancer/app/midecode-ionos/a7b37b114bc534d3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-20250726033801229700000006",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "nginx2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:targetgroup/tf-20250726033800211300000003/5efe4731a9a4bcdd",
            "arn_suffix": "targetgroup/tf-20250726033800211300000003/5efe4731a9a4bcdd",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:targetgroup/tf-20250726033800211300000003/5efe4731a9a4bcdd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:058264383156:loadbalancer/app/midecode-ionos/a7b37b114bc534d3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-20250726033800211300000003",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group/sg-063529c66929249da",
            "description": "Security group for midecode-ionos-alb-sg application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063529c66929249da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "midecode-ionos-alb-sg-20250726073049082900000001",
            "name_prefix": "midecode-ionos-alb-sg-",
            "owner_id": "058264383156",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group-rule/sgr-0509c001452ffef88",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0509c001452ffef88",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-063529c66929249da",
            "security_group_rule_id": "sgr-0509c001452ffef88",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group-rule/sgr-037cd9e401d89afdc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-037cd9e401d89afdc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-063529c66929249da",
            "security_group_rule_id": "sgr-037cd9e401d89afdc",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group-rule/sgr-0dfdb9dfddc9556b3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0dfdb9dfddc9556b3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-063529c66929249da",
            "security_group_rule_id": "sgr-0dfdb9dfddc9556b3",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos",
              "terraform-aws-modules": "alb"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:subnet/subnet-073889b70070f1241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073889b70070f1241",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264383156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "state": "available",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          }
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group/sg-0f8258b8e5163662c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f8258b8e5163662c",
            "ingress": [],
            "name": "nginx1-ecs-service-sg-20250726075051054800000002",
            "name_prefix": "nginx1-ecs-service-sg-",
            "owner_id": "058264383156",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx1-ecs-service-sg",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "nginx1-ecs-service-sg",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_listener_certificate.this",
            "module.alb.aws_lb_listener_rule.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_lb_target_group_attachment.additional",
            "module.alb.aws_lb_target_group_attachment.this",
            "module.alb.aws_route53_record.this",
            "module.alb.aws_security_group.this",
            "module.alb.aws_vpc_security_group_egress_rule.this",
            "module.alb.aws_vpc_security_group_ingress_rule.this",
            "module.alb.aws_wafv2_web_acl_association.this",
            "module.alb.data.aws_partition.current",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group-rule/sgr-07ab93c1d170ee81c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07ab93c1d170ee81c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0f8258b8e5163662c",
            "security_group_rule_id": "sgr-07ab93c1d170ee81c",
            "tags": {
              "Name": "nginx1-ecs-service-sg-all",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "nginx1-ecs-service-sg-all",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_listener_certificate.this",
            "module.alb.aws_lb_listener_rule.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_lb_target_group_attachment.additional",
            "module.alb.aws_lb_target_group_attachment.this",
            "module.alb.aws_route53_record.this",
            "module.alb.aws_security_group.this",
            "module.alb.aws_vpc_security_group_egress_rule.this",
            "module.alb.aws_vpc_security_group_ingress_rule.this",
            "module.alb.aws_wafv2_web_acl_association.this",
            "module.alb.data.aws_partition.current",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group-rule/sgr-048a5406eb9b50f7b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Service port",
            "from_port": 80,
            "id": "sgr-048a5406eb9b50f7b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-063529c66929249da",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0f8258b8e5163662c",
            "security_group_rule_id": "sgr-048a5406eb9b50f7b",
            "tags": {
              "Name": "nginx1-ecs-service-sg-alb",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "nginx1-ecs-service-sg-alb",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_listener_certificate.this",
            "module.alb.aws_lb_listener_rule.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_lb_target_group_attachment.additional",
            "module.alb.aws_lb_target_group_attachment.this",
            "module.alb.aws_route53_record.this",
            "module.alb.aws_security_group.this",
            "module.alb.aws_vpc_security_group_egress_rule.this",
            "module.alb.aws_vpc_security_group_ingress_rule.this",
            "module.alb.aws_wafv2_web_acl_association.this",
            "module.alb.data.aws_partition.current",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ecs_service_connect",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group-rule/sgr-0e318b31378e92423",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Service Connect port",
            "from_port": 0,
            "id": "sgr-0e318b31378e92423",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0f8258b8e5163662c",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0f8258b8e5163662c",
            "security_group_rule_id": "sgr-0e318b31378e92423",
            "tags": {
              "Name": "nginx1-ecs-service-sg-ecs_service_connect",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "nginx1-ecs-service-sg-ecs_service_connect",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_listener_certificate.this",
            "module.alb.aws_lb_listener_rule.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_lb_target_group_attachment.additional",
            "module.alb.aws_lb_target_group_attachment.this",
            "module.alb.aws_route53_record.this",
            "module.alb.aws_security_group.this",
            "module.alb.aws_vpc_security_group_egress_rule.this",
            "module.alb.aws_vpc_security_group_ingress_rule.this",
            "module.alb.aws_wafv2_web_acl_association.this",
            "module.alb.data.aws_partition.current",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service2",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:subnet/subnet-073889b70070f1241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073889b70070f1241",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264383156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "state": "available",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          }
        }
      ]
    },
    {
      "module": "module.ecs_service2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group/sg-0a9632aa94ac3085f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a9632aa94ac3085f",
            "ingress": [],
            "name": "nginx2-ecs-service-sg-20250726075051054800000001",
            "name_prefix": "nginx2-ecs-service-sg-",
            "owner_id": "058264383156",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx2-ecs-service-sg",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "nginx2-ecs-service-sg",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_listener_certificate.this",
            "module.alb.aws_lb_listener_rule.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_lb_target_group_attachment.additional",
            "module.alb.aws_lb_target_group_attachment.this",
            "module.alb.aws_route53_record.this",
            "module.alb.aws_security_group.this",
            "module.alb.aws_vpc_security_group_egress_rule.this",
            "module.alb.aws_vpc_security_group_ingress_rule.this",
            "module.alb.aws_wafv2_web_acl_association.this",
            "module.alb.data.aws_partition.current",
            "module.ecs_service2.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group-rule/sgr-05fff19bce4acc0e2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05fff19bce4acc0e2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0a9632aa94ac3085f",
            "security_group_rule_id": "sgr-05fff19bce4acc0e2",
            "tags": {
              "Name": "nginx2-ecs-service-sg-all",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "nginx2-ecs-service-sg-all",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_listener_certificate.this",
            "module.alb.aws_lb_listener_rule.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_lb_target_group_attachment.additional",
            "module.alb.aws_lb_target_group_attachment.this",
            "module.alb.aws_route53_record.this",
            "module.alb.aws_security_group.this",
            "module.alb.aws_vpc_security_group_egress_rule.this",
            "module.alb.aws_vpc_security_group_ingress_rule.this",
            "module.alb.aws_wafv2_web_acl_association.this",
            "module.alb.data.aws_partition.current",
            "module.ecs_service2.aws_security_group.this",
            "module.ecs_service2.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group-rule/sgr-042bbefc2eb563d2d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Service port",
            "from_port": 80,
            "id": "sgr-042bbefc2eb563d2d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-063529c66929249da",
            "region": "ap-southeast-1",
            "security_group_id": "sg-0a9632aa94ac3085f",
            "security_group_rule_id": "sgr-042bbefc2eb563d2d",
            "tags": {
              "Name": "nginx2-ecs-service-sg-alb",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "nginx2-ecs-service-sg-alb",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_listener_certificate.this",
            "module.alb.aws_lb_listener_rule.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_lb_target_group_attachment.additional",
            "module.alb.aws_lb_target_group_attachment.this",
            "module.alb.aws_route53_record.this",
            "module.alb.aws_security_group.this",
            "module.alb.aws_vpc_security_group_egress_rule.this",
            "module.alb.aws_vpc_security_group_ingress_rule.this",
            "module.alb.aws_wafv2_web_acl_association.this",
            "module.alb.data.aws_partition.current",
            "module.ecs_service2.aws_security_group.this",
            "module.ecs_service2.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:network-acl/acl-085a264e43c4ec6f0",
            "default_network_acl_id": "acl-085a264e43c4ec6f0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-085a264e43c4ec6f0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "058264383156",
            "region": "ap-southeast-1",
            "subnet_ids": [
              "subnet-00b6ce4e6067ad08e",
              "subnet-025ae46b72b6ed15e",
              "subnet-05d9c61d5f9649fe1",
              "subnet-073889b70070f1241",
              "subnet-07693580c4689a0b8",
              "subnet-0b2682b57df10813a"
            ],
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:route-table/rtb-070a58cb354bcde13",
            "default_route_table_id": "rtb-070a58cb354bcde13",
            "id": "rtb-070a58cb354bcde13",
            "owner_id": "058264383156",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:security-group/sg-05f2523fc4287319b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05f2523fc4287319b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "058264383156",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dfbc1355012a84d",
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:elastic-ip/eipalloc-08dfbc1355012a84d",
            "association_id": "eipassoc-0401bb6563e3e52be",
            "domain": "vpc",
            "id": "eipalloc-08dfbc1355012a84d",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0de864decaf9764e8",
            "private_dns": "ip-10-0-48-109.ap-southeast-1.compute.internal",
            "private_ip": "10.0.48.109",
            "public_dns": "ec2-175-41-156-87.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "175.41.156.87",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:internet-gateway/igw-0d6a1e479d01f19fc",
            "id": "igw-0d6a1e479d01f19fc",
            "owner_id": "058264383156",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dfbc1355012a84d",
            "association_id": "eipassoc-0401bb6563e3e52be",
            "connectivity_type": "public",
            "id": "nat-095a2a4f613fd6c2f",
            "network_interface_id": "eni-0de864decaf9764e8",
            "private_ip": "10.0.48.109",
            "public_ip": "175.41.156.87",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05d9c61d5f9649fe1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0059aa51f8c7baec31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-095a2a4f613fd6c2f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0059aa51f8c7baec3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d6a1e479d01f19fc",
            "id": "r-rtb-0bb0cc39d915012391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0bb0cc39d91501239",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:route-table/rtb-0059aa51f8c7baec3",
            "id": "rtb-0059aa51f8c7baec3",
            "owner_id": "058264383156",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-095a2a4f613fd6c2f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:route-table/rtb-0bb0cc39d91501239",
            "id": "rtb-0bb0cc39d91501239",
            "owner_id": "058264383156",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6a1e479d01f19fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d282fcf2a4d28c5",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0059aa51f8c7baec3",
            "subnet_id": "subnet-073889b70070f1241"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e3a1807adbfff1c",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0059aa51f8c7baec3",
            "subnet_id": "subnet-00b6ce4e6067ad08e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d136abae9d9f82d",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0059aa51f8c7baec3",
            "subnet_id": "subnet-025ae46b72b6ed15e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd79a1ba8b182d0d",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0bb0cc39d91501239",
            "subnet_id": "subnet-05d9c61d5f9649fe1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0674d3a41c98ecbfb",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0bb0cc39d91501239",
            "subnet_id": "subnet-07693580c4689a0b8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3ad8204adbf655f",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0bb0cc39d91501239",
            "subnet_id": "subnet-0b2682b57df10813a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:subnet/subnet-073889b70070f1241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073889b70070f1241",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264383156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:subnet/subnet-00b6ce4e6067ad08e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b6ce4e6067ad08e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264383156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:subnet/subnet-025ae46b72b6ed15e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025ae46b72b6ed15e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264383156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:subnet/subnet-05d9c61d5f9649fe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d9c61d5f9649fe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264383156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:subnet/subnet-07693580c4689a0b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07693580c4689a0b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264383156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:subnet/subnet-0b2682b57df10813a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2682b57df10813a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264383156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "vpc_id": "vpc-0609e6a41cf755597"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264383156:vpc/vpc-0609e6a41cf755597",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085a264e43c4ec6f0",
            "default_route_table_id": "rtb-070a58cb354bcde13",
            "default_security_group_id": "sg-05f2523fc4287319b",
            "dhcp_options_id": "dopt-09a0d680a410f185f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0609e6a41cf755597",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-070a58cb354bcde13",
            "owner_id": "058264383156",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            },
            "tags_all": {
              "Name": "midecode-ionos",
              "environment": "poc",
              "owner": "midecode",
              "project": "ionos"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}